CNCS Dev 12/src/objects/Test_User__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state_c__c</fullName>
        <label>state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test User</label>
    <nameField>
        <label>Test User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>